--- a/roles/winvm/templates/unattend.xml.j2
+++ b/roles/winvm/templates/unattend.xml.j2
@@ -13,7 +13,7 @@
                 <RouterDiscoveryEnabled>false</RouterDiscoveryEnabled>
             </Ipv4Settings>
             <UnicastIpAddresses>
-                <IpAddress wcm:action="add" wcm:keyValue="1">{{ vm_ip }}</IpAddress>
+                <IpAddress wcm:action="add" wcm:keyValue="1">{{ vm_ip }}/{{ vm_ip_cidr }}</IpAddress>
             </UnicastIpAddresses>
             <Routes>
                 <Route wcm:action="add">
@@ -57,6 +57,32 @@
                     <PlainText>true</PlainText>
                 </AdministratorPassword>
             </UserAccounts>
+            <AutoLogon>
+                <Username>Administrator</Username>
+                <Password>
+                    <Value>{{ vm_admin_password }}</Value>
+                    <PlainText>true</PlainText>
+                </Password>
+                <Enabled>true</Enabled>
+                <LogonCount>1</LogonCount>
+            </AutoLogon>
+            <FirstLogonCommands>
+                <SynchronousCommand wcm:action="add">
+                    <Order>1</Order>
+                    <Description>Download WinRM for Ansible Setup Script</Description>
+                    <CommandLine>C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -NoLogo -ExecutionPolicy Bypass -Command "Invoke-WebRequest -Uri https://raw.githubusercontent.com/ansible/ansible-documentation/refs/heads/devel/examples/scripts/ConfigureRemotingForAnsible.ps1 -OutFile C:\Windows\Temp\ConfigureRemotingForAnsible.ps1"</CommandLine>
+                </SynchronousCommand>
+                <SynchronousCommand wcm:action="add">
+                    <Order>2</Order>
+                    <Description>Setup WinRM for Ansible</Description>
+                    <CommandLine>C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -NoLogo -ExecutionPolicy Bypass -File C:\Windows\Temp\ConfigureRemotingForAnsible.ps1</CommandLine>
+                </SynchronousCommand>
+                <SynchronousCommand wcm:action="add">
+                    <Order>3</Order>
+                    <Description>Logoff</Description>
+                    <CommandLine>logoff</CommandLine>
+                </SynchronousCommand>
+            </FirstLogonCommands>
         </component>
         <component name="Microsoft-Windows-International-Core" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <InputLocale>en-US</InputLocale>
